--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,16 @@
 buildscript {
+    ext.android = [
+            'compileSdkVersion': 28,
+            'minSdkVersion'    : 18,
+            'targetSdkVersion' : 28,
+            'supportVersion'   : '28.0.0'
+    ]
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:3.1.1'
         classpath 'com.novoda:bintray-release:0.8.1'
     }
 }
